# sway-utils

./: Cargo.toml  README.md
src/: args.rs  main.rs
src/subcommands/: focused_program_cwd.rs  focused_program_kill.rs  focused_program_pid.rs  focused_window_pwd.rs  mod.rs
