[package]
name = "sway-utils"
version = "0.2.0"
authors = ["Caleb Bassi <calebjbassi@gmail.com>"]
edition = "2018"

[[bin]]
name = "sway-utils"
path = "src/main.rs"

[dependencies]
structopt = "0.2.15"
# i3ipc = "0.10.1"
i3ipc = { git = "https://github.com/cjbassi/i3ipc-rs", branch = "node/pid", features = ["sway-1-1"] }
